add progress calculations